--- a/src/assets/i18n/ko-KR.json
+++ b/src/assets/i18n/ko-KR.json
@@ -1014,5 +1014,43 @@
 			"PIN_UPDATE_TITLE": "회의 호스트 PIN이 만료되었습니다. 다음에서 PIN을 변경하십시오.",
 			"OPEN_SETTINGS": "설정"
 		}
+	},
+	"UTILITIES": {
+		"COPY_OR_EMAIL_LINK": {
+			"CANCEL": "취소",
+			"COPY": "링크 복사",
+			"SHARE_LINK": "이메일로 공유",
+			"COPIED": "링크가 클립보드에 복사되었습니다.",
+			"EMAIL_INVITE": "이메일 초대",
+			"EMAIL_INVITE_MEETING_SUBJECT": "{{fullName}} 님이 회의에 참가할 수 있도록 귀하를 초대합니다.",
+			"EMAIL_INVITE_MEETING_BODY": "다음 회의에 참가하십시오.%0D%0A{{url}}%0D%0A%0D%0A{{name}}",
+			"EMAIL_INVITE_RECORDING_SUBJECT": "{{fullName}}님이 {{subject}} 비디오를 보냈습니다.",
+			"EMAIL_INVITE_RECORDING_BODY": "{{fullName}}님이 레코딩을 공유했습니다.%0D%0A{{url}}%0D%0A%0D%0A{{subject}}%0D%0A소유자: {{owner}}{{description}}",
+			"EMAIL_GUEST_INVITE_RECORDING_SUBJECT": "{{subject}} 비디오가 귀하와 공유되었습니다.",
+			"EMAIL_GUEST_INVITE_RECORDING_BODY": "이 레코딩을 확인해 보십시오.%0D%0A{{url}}%0D%0A%0D%0A{{subject}}%0D%0A소유자: {{owner}}{{description}}",
+			"EMAIL_INVITE_BROADCAST_SUBJECT": "{{fullName}}님이 {{subject}} 브로드캐스트를 보냈습니다.",
+			"EMAIL_INVITE_BROADCAST_BODY": "{{subject}}%0D%0A소유자: {{owner}}%0D%0A날짜: {{date}}{{description}}%0D%0A%0D%0A참가하려면 클릭:%0D%0A{{url}}",
+			"EMAIL_GUEST_INVITE_BROADCAST_SUBJECT": "{{subject}} 브로드캐스트가 귀하와 공유되었습니다.",
+			"EMAIL_GUEST_INVITE_BROADCAST_BODY": "{{subject}}%0D%0A소유자: {{owner}}%0D%0A날짜: {{date}}{{description}}%0D%0A%0D%0A참가하려면 클릭:%0D%0A{{url}}"
+		},
+		"PLAYER": {
+			"NOT_AVAILABLE": "아직 이 프로그램으로 볼 수 없습니다. 나중에 다시 시도하십시오.",
+			"DENIED": "이 프로그램은 현재 위치에서 재생할 수 없습니다. 관리자가 액세스를 제한했습니다.",
+			"NOT_FOUND": "이 프로그램을 찾을 수 없습니다. 프로그램이 삭제되었을 수 있습니다. 다시 로그인하거나 시스템 관리자에게 문의하십시오.",
+			"NOT_AUTHORIZED": "이 비디오를 볼 권한이 없습니다. 다시 로그인하거나 시스템 관리자에게 문의하십시오.",
+			"NO_FLASH": "이 비디오는 현재 이 브라우저에서 재생할 수 없습니다. Adobe Flash Player를 설치해 주십시오. 설치가 완료된 후 브라우저를 다시 시작해야 할 수도 있습니다."
+		},
+		"JOIN_BUTTON": {
+			"JOIN": "참가",
+			"DETECTING_CLIENTS": "앱 확인 중...",
+			"BROWSER_AUDIO_VIDEO": "오디오/비디오 + 프레젠테이션",
+			"AUDIO_AND_PRESENTATION": "오디오 + 프레젠테이션",
+			"PRESENTATION_ONLY": "프레젠테이션 전용",
+			"CANCEL": "취소"
+		},
+		"FILE_READER": {
+			"DENIED_EXTENSION": "파일 확장 거부됨",
+			"FORMAT_ERROR": "섬네일은 다음 형식 중 하나여야 합니다. {{types}}"
+		}
 	}
 }
